Moved NAEV path to separate file, added lighting/camera example & .gitignore.

--- a/README
+++ b/README
@@ -1,8 +1,12 @@
 NAEV-ARTWORK README
 
+IMPORTANT: Since render.sh is subject to change, the path to mkspr is grabbed from 3D/naevpath.sh. Copy 3D/naevpath.sh.example to 3D/naevpath.sh and edit it to point to your NAEV Git checkout.
+
 WARNING: The .sh files within 3D/ are subject to change, and being that they can contain user-specific data, it's wise to back them up.
 
 DIRECTORIES:
+
+   .gitignore by default will not commit 3D/raw or 3D/final, as they merely contain renders.
 
    ships/  --  This directory contains all of the current .blends. Ships go on layer 1, and their engine meshes go on layer 7.
    ships/legacy -- This is a legacy directory, containing unused ships and texture variants. Since the current .blends are resized and repositioned, it's likely best to just take the textures from these and apply them to current .blends (in ships/). The files are gzipped for size, but Blender can read them without issue.
@@ -12,7 +16,7 @@ outfits/
    For the laser, only the base .blend is included. The Mk2 is created by merely increasing the muzzle size by 20% and changing the heatsink near the base to a green material.
    The launcher graphics were created by combining the missile .blends with a desaturated Banshee launcher.
    For creating your own graphics, turret.blend and turret2.blend are included. They're not actually used in-game, but they are the basis for the other turret models.
-   There is one .blend missing from this repository, due to its immense size. The model for the Hellburner is roughly 40 MB , and can be acquired by contacting Deiz or Joss.
+   There is one .blend missing from this repository, due to its immense size. The model for the Hellburner is roughly 40 MB, and can be acquired by contacting Deiz or Joss.
 
 RENDERING:
 
@@ -21,6 +25,8 @@ RENDERING:
    SHIP RENDERING
 
       Ship rendering isn't an overly difficult task in NAEV. All ship sprites are based on Blender models, rendered with our scripts.
+
+      Note: Ships aren't automatically resized. To gauge size, open examples/lighting-and-camera.blend and import your meshes. An ideal size nearly touches the edge, such that there's minimal wasted space on the sprite.
 
    Rendering steps:
 
