Added new thruster model, updated AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
-THESE MODELS ARE CURRENTLY ALL TAKEN FROM VEGASTRIKE (http://vegastrike.sf.net)
-WITH PERMISSION
+The majority of ship models are sourced from Vega Strike.
+
+Content is licensed under a mixture of Public Domain, GPLv2, GPLv3, and Creative Commons licenses. See gfx/ARTWORK_LICENSE for more information.
+
+http://github.com/bobbens/naev/blob/master/gfx/ARTWORK_LICENSE
