--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
-The majority of ship models are sourced from Vega Strike.
+Many ship models are sourced from Vega Strike.
 
-Content is licensed under a mixture of Public Domain, GPLv2, GPLv3, and Creative Commons 3.0 licenses. See gfx/ARTWORK_LICENSE for more information.
+Content is licensed under a mixture of Public Domain, GPLv2, GPLv3, and Creative Commons 3.0 licenses. See dat/gfx/ARTWORK_LICENSE for more information.
 
-http://github.com/bobbens/naev/blob/master/gfx/ARTWORK_LICENSE
+http://github.com/bobbens/naev/blob/master/dat/gfx/ARTWORK_LICENSE
