Add Za'lek uniforms to the portrait template file.

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,6 @@ Special cases are listed below.
 
 This is a template file used for generating portraits. Originally by
 Nihilos <https://opengameart.org/users/nihilos>, based on portraits by
-Ingo Ruhnke <grumbel@gmx.de>. Components are by Nihilos.
+Ingo Ruhnke <grumbel@gmx.de>. Components are by Nihilos and Unnamed.
 
 * License: CC-by 3.0
