Added that gray turtleneck thing from women11.xcf to the generic XCF.

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,7 +11,7 @@ Special cases are listed below.
 
 These are template files used for generating portraits. Originally by
 Nihilos <https://opengameart.org/users/nihilos>, based on portraits by
-Ingo Ruhnke <grumbel@gmx.de>. Components are by Nihilos and Unnamed.
-Edited by The Diligent Circle.
+Ingo Ruhnke <grumbel@gmx.de>. Components are by Nihilos, Unnamed, and
+Ingo Ruhnke. Edited by The Diligent Circle.
 
 * License: CC-by 3.0
