Fix ARTWORK_LICENSE link.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,8 @@
 Many ship models are sourced from Vega Strike.
 
-Content is licensed under a mixture of Public Domain, GPLv2, GPLv3, and Creative Commons 3.0 licenses. See dat/gfx/ARTWORK_LICENSE for more information.
+Content is licensed under a mixture of Public Domain, GPLv2, GPLv3, and Creative Commons 3.0 licenses. See dat/gfx/ARTWORK_LICENSE.yaml for more information.
 
-https://github.com/naev/naev/blob/master/dat/gfx/ARTWORK_LICENSE
+https://github.com/naev/naev/blob/HEAD/dat/gfx/ARTWORK_LICENSE.yaml
 
 Special cases are listed below.
 
